Removed dots. eww

--- a/static/converter.html
+++ b/static/converter.html
@@ -26,10 +26,10 @@
         <div class="card">
             <div class="card-body">
                 <div class="mb-3">
-                    <input type="text" class="form-control" id="fileUrl" placeholder="Minimap render file url.">
+                    <input type="text" class="form-control" id="fileUrl" placeholder="Minimap render file url">
                 </div>
                 <div class="mb-3">
-                    <input type="text" class="form-control" id="outputUrl" placeholder="Minimap tactics url." readonly>
+                    <input type="text" class="form-control" id="outputUrl" placeholder="Minimap tactics url" readonly>
                 </div>
                 <button id="convert" class="btn btn-primary">Convert & Copy</button>
                 <button id="convert-open" class="btn btn-primary">Convert & Open</button>
